style: fix text alignment in table (#15296)

--- a/feature-libs/cart/saved-cart/styles/_saved-cart-list.scss
+++ b/feature-libs/cart/saved-cart/styles/_saved-cart-list.scss
@@ -55,7 +55,7 @@ cx-saved-cart-list {
       padding-inline-start: 0;
 
       @include media-breakpoint-up(md) {
-        text-align: start;
+        text-align: center;
 
         &:last-child {
           text-align: end;
