--- a/feature-libs/order/styles/components/order-history/_order-history.scss
+++ b/feature-libs/order/styles/components/order-history/_order-history.scss
@@ -42,7 +42,7 @@
       padding: 1.625rem 0;
 
       @include media-breakpoint-up(md) {
-        text-align: start;
+        text-align: center;
 
         &:last-child {
           text-align: end;
