--- a/feature-libs/order/styles/components/order-history/_order-return-request-list.scss
+++ b/feature-libs/order/styles/components/order-history/_order-return-request-list.scss
@@ -41,7 +41,7 @@
       padding: 1.625rem 0;
 
       @include media-breakpoint-up(md) {
-        text-align: start;
+        text-align: center;
 
         &:last-child {
           text-align: end;
